# interview_demo

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: test.yml
.idk/: project.yml
cmake/: compile_options.cmake  idk_add_dependency_subdirectory.cmake  setup.cmake  target_add_options.cmake
src/: CMakeLists.txt
src/base/: CMakeLists.txt
src/base/clock/: CMakeLists.txt  rdtsc_clock.h  sync_rdtsc_clock.h
src/base/clock/rdtsc_clock/: duration.cpp  duration.h  time_point.h
src/base/launcher/: CMakeLists.txt  arg_parser.h  macros.h  tool_launcher.cpp  tool_launcher.h
src/base/logger/: CMakeLists.txt  loggable_component.cpp  loggable_component.h  logger.cpp  logger.h  macros.h
src/base/logger/default_formatter/: class.h  concept.h  default_formatters.h  enum.h  map.h  optional.h  pair.h  path.h  register_macros.h  vector.h
src/base/logger/rfl_chrono_crutch/: _chrono_parser.h  _literal_with_default.h
src/base/macros/: CMakeLists.txt  require.h
src/base/serialiser/: CMakeLists.txt
src/base/serialiser/auto/: read_file.h
src/base/serialiser/json/: json.h
src/base/serialiser/yaml/: yaml.h
src/base/stream/: CMakeLists.txt  byte_view_stream.cpp  byte_view_stream.h  mutable_byte_view_stream.h  stream.cpp  stream.h
src/base/thread/: CMakeLists.txt  cpu.cpp  cpu.h  execute_with_timeout.h  thread.h
src/base/type/: CMakeLists.txt  align.h  concept.h  constexpr_for.h  default_constructor.h  enum.h  span.h  start_lifetime_as.h  uint24.h
src/gateway/: CMakeLists.txt
src/gateway/ws_demo/: config.h  service.cpp  service.h
src/network/: CMakeLists.txt
src/network/arp/: arp.cpp  arp.h  arp_handler.cpp  arp_handler.h
src/network/dpdk/: device.cpp  device.h  dpdk.cpp  dpdk.h  master_serivce.cpp  master_service.h  packet.h  sender.cpp  sender.h
src/network/eth_ip/: ethernet.cpp  ethernet.h  ip.cpp  ip.h
src/network/interface/: config.h  interface.h  interface_manager.h
src/network/tcp/: client.cpp  client.h  flags.h  model.h  packet_view.cpp  packet_view.h  seq_number.h
src/network/tls12/: client.cpp  client.h  messages.h  model.h  openssl.cpp  openssl.h  type.cpp  type.h
src/network/type/: big_endian.h  endpoint.h  ip.cpp  ip.h  mac.cpp  mac.h  port.h
src/network/wss/: client.cpp  client.h  model.h
test/network/: CMakeLists.txt  main.cpp
test/network/tcp_client/: seq_number_test.cpp  tcp_flags_test.cpp
tool/: CMakeLists.txt
tool/gateway/demo/: CMakeLists.txt  config_example.yml  main.cpp
tool/network/: CMakeLists.txt
tool/network/dpdk_master/: CMakeLists.txt  main.cpp
